<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp" >
<!--    android:orientation="vertical">-->

    <TextView
        android:id="@+id/textView2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_title_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:id="@+id/expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expense_title_hint"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_amount_label"
        app:layout_constraintTop_toBottomOf="@id/expense_title" />

    <EditText android:id="@+id/expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expense_amount_hint"
        app:layout_constraintTop_toBottomOf="@id/textView" />

<!--    <Button android:id="@+id/expense_date"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->

<!--    <CheckBox android:id="@+id/expense_solved"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/expense_solved_label" />-->

</androidx.constraintlayout.widget.ConstraintLayout>